--- a/config-client-twitter_to_kafka.yml
+++ b/config-client-twitter_to_kafka.yml
@@ -22,12 +22,12 @@ retry-config:
   initial-interval-ms: 1000
   max-interval-ms: 10000
   multiplier: 2.0
-  maxAttempts: 3
-  sleep-time-ms: 2000
+  maxAttempts: 10
+  sleep-time-ms: 4000
 
 kafka-config:
 #  bootstrap-servers: localhost:19092
-  bootstrap-servers: localhost:19092, localhost:29092, localhost:39092
+  bootstrap-servers: kafka-broker-1:19092, kafka-broker-2:29092, kafka-broker-3:39092
   schema-registry-url-key: schema.registry.url
   schema-registry-url: http://localhost:8081
   topic-name: twitter-topic
